--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[https://watasuke.tk](https://watasuke.tk)で公開される（予定の）ページ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/watasuke102/watasuke.tk/issues"
   },
-  "homepage": "https://github.com/watasuke102/watasuke.tk#readme"
+  "homepage": "https://github.com/watasuke102/watasuke.tk#readme",
+  "dependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
+    "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.4",
+    "webpack": "^5.32.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
