--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
+    "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
     "webpack": "^5.32.0",
