--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.4.1",
     "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
