--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "homepage": "https://github.com/watasuke102/watasuke.tk#readme",
   "dependencies": {
     "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.7",
     "gatsby": "^3.3.0",
+    "gatsby-plugin-image": "^1.3.0",
+    "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-sass": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-typescript": "^3.3.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.2",
     "typescript": "^4.2.4"
   }
