--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.2",
+    "react-remark": "^2.0.3",
+    "remark": "^13.0.0",
+    "remark-slug": "^6.0.0",
+    "remark-stringify": "^8.1.1",
+    "remark-toc": "^7.2.0",
     "typescript": "^4.2.4"
   }
 }
