--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/watasuke102/watasuke.tk#readme",
   "dependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-transition-group": "^4.4.1",
     "gatsby": "^3.3.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
