--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "remark-slug": "^6.0.0",
     "remark-stringify": "^8.1.1",
     "remark-toc": "^7.2.0",
+    "remove-markdown": "^0.3.0",
     "typescript": "^4.2.4"
   }
 }
