--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/react": "^17.0.3",
     "@types/react-transition-group": "^4.4.1",
+    "@types/remove-markdown": "^0.3.0",
     "gatsby": "^3.3.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
