--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/watasuke102/watasuke.tk#readme",
   "dependencies": {
+    "@types/prismjs": "^1.16.5",
     "@types/react": "^17.0.3",
     "@types/react-transition-group": "^4.4.1",
     "@types/remove-markdown": "^0.3.0",
+    "babel-plugin-prismjs": "^2.0.1",
+    "babel-preset-gatsby": "^1.3.0",
     "gatsby": "^3.3.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
@@ -31,6 +34,7 @@
     "gatsby-plugin-typescript": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
+    "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-remark": "^2.0.3",
     "react-transition-group": "^4.4.1",
