--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["babel-preset-gatsby"],
   "plugins": [
     ["prismjs", {
-      "plugins": ["show-language", "line-numbers", "copy-to-clipboard"],
+      "plugins": ["show-language", "line-numbers", "copy-to-clipboard", "inline-color"],
       "theme": "tomorrow",
       "css": true,
       "languages": [
