--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-typescript": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
+    "gsap": "^3.6.1",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-remark": "^2.0.3",
