update: apiフォルダの中身を更新

--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -30,6 +30,11 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "tags": {
+      "via": "articles",
+      "collection": "tags",
+      "dominant": true
     }
   }
 }
