--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "@types/prismjs": "^1.16.5",
     "@types/react": "^17.0.3",
+    "@types/react-helmet": "^6.1.1",
     "@types/react-transition-group": "^4.4.1",
     "@types/remove-markdown": "^0.3.0",
     "babel-plugin-prismjs": "^2.0.1",
     "babel-preset-gatsby": "^1.3.0",
     "gatsby": "^3.3.0",
+    "gatsby-plugin-google-analytics": "^3.4.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-sass": "^4.3.0",
@@ -37,6 +39,7 @@
     "gsap": "^3.6.1",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-remark": "^2.0.3",
     "react-transition-group": "^4.4.1",
     "remark": "^13.0.0",
