--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop -H 0.0.0.0",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve -p 2999"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
     "babel-plugin-prismjs": "^2.0.1",
     "babel-preset-gatsby": "^1.3.0",
     "gatsby": "^3.3.0",
-    "gatsby-plugin-google-analytics": "^3.4.0",
+    "gatsby-plugin-google-gtag": "^3.4.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-sass": "^4.3.0",
