--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-sass": "^4.3.0",
     "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-sitemap": "^4.0.0",
     "gatsby-plugin-typescript": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
