--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-google-gtag": "^3.4.0",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sass": "^4.3.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "^4.0.0",
