--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-remark": "^2.0.3",
     "react-transition-group": "^4.4.1",
     "remark": "^13.0.0",
+    "remark-gfm": "^1.0.0",
     "remark-slug": "^6.0.0",
     "remark-stringify": "^8.1.1",
     "remark-toc": "^7.2.0",
