--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[https://watasuke.tk](https://watasuke.tk)で公開されているページ",
   "main": "index.js",
   "scripts": {
+    "fmt": "prettier --write src/",
     "build": "gatsby build",
     "dev": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve -p 2999"
@@ -39,6 +40,7 @@
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "gsap": "^3.7.1",
+    "prettier": "^2.5.0",
     "prismjs": "^1.24.1",
     "react": "^17.0.2",
     "react-helmet": "^6.1.0",
