--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "gsap": "^3.7.1",
+    "ogp-parser": "^0.6.0",
     "prettier": "^2.5.0",
     "prismjs": "^1.24.1",
     "react": "^17.0.2",
