--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
   "homepage": "https://github.com/watasuke102/watasuke.tk#readme",
   "dependencies": {
     "@types/prismjs": "^1.16.6",
-    "@types/react": "^17.0.20",
-    "@types/react-helmet": "^6.1.2",
-    "@types/react-transition-group": "^4.4.2",
+    "@types/react": "^17.0.37",
+    "@types/react-helmet": "^6.1.4",
+    "@types/react-transition-group": "^4.4.4",
     "@types/remove-markdown": "^0.3.1",
     "babel-plugin-prismjs": "^2.1.0",
-    "babel-preset-gatsby": "^1.13.0",
-    "gatsby": "^3.13.0",
-    "gatsby-plugin-google-gtag": "^3.13.0",
-    "gatsby-plugin-image": "^1.13.0",
-    "gatsby-plugin-manifest": "^3.13.0",
-    "gatsby-plugin-react-helmet": "^4.13.0",
-    "gatsby-plugin-sass": "^4.13.0",
-    "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-plugin-sitemap": "^4.9.0",
-    "gatsby-plugin-typescript": "^3.13.0",
-    "gatsby-source-filesystem": "^3.13.0",
-    "gatsby-transformer-sharp": "^3.13.0",
-    "gsap": "^3.7.1",
+    "babel-preset-gatsby": "^2.3.0",
+    "gatsby": "^4.3.0",
+    "gatsby-plugin-google-gtag": "^4.3.0",
+    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-plugin-typescript": "^4.3.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
+    "gsap": "^3.8.0",
     "ogp-parser": "^0.6.0",
-    "prettier": "^2.5.0",
-    "prismjs": "^1.24.1",
+    "prettier": "^2.5.1",
+    "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-remark": "^2.0.3",
     "react-side-effect": "^2.1.1",
     "react-transition-group": "^4.4.2",
-    "remark": "^14.0.1",
-    "remark-gfm": "^1.0.0",
-    "remark-slug": "^7.0.0",
-    "remark-stringify": "^10.0.0",
-    "remark-toc": "^8.0.0",
+    "remark": "^14.0.2",
+    "remark-gfm": "1.0.0",
+    "remark-slug": "^7.0.1",
+    "remark-stringify": "^10.0.2",
+    "remark-toc": "^8.0.1",
     "remove-markdown": "^0.3.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.5.2"
   }
 }
