--- a/package.json
+++ b/package.json
@@ -21,32 +21,32 @@
   },
   "homepage": "https://github.com/watasuke102/watasuke.tk#readme",
   "dependencies": {
-    "@types/prismjs": "^1.16.6",
-    "@types/react": "^17.0.37",
-    "@types/react-helmet": "^6.1.4",
+    "@types/prismjs": "^1.26.0",
+    "@types/react": "^18.0.5",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-transition-group": "^4.4.4",
     "@types/remove-markdown": "^0.3.1",
     "babel-plugin-prismjs": "^2.1.0",
-    "babel-preset-gatsby": "^2.3.0",
-    "gatsby": "^4.3.0",
-    "gatsby-plugin-google-gtag": "^4.3.0",
-    "gatsby-plugin-image": "^2.3.0",
-    "gatsby-plugin-manifest": "^4.3.0",
-    "gatsby-plugin-react-helmet": "^5.3.0",
-    "gatsby-plugin-sass": "^5.3.0",
-    "gatsby-plugin-sharp": "^4.3.0",
-    "gatsby-plugin-sitemap": "^5.3.0",
-    "gatsby-plugin-typescript": "^4.3.0",
-    "gatsby-source-filesystem": "^4.3.0",
-    "gatsby-transformer-sharp": "^4.3.0",
-    "gsap": "^3.8.0",
+    "babel-preset-gatsby": "^2.12.1",
+    "framer-motion": "^6.3.0",
+    "gatsby": "^4.12.1",
+    "gatsby-plugin-google-gtag": "^4.12.1",
+    "gatsby-plugin-image": "^2.12.1",
+    "gatsby-plugin-manifest": "^4.12.1",
+    "gatsby-plugin-react-helmet": "^5.12.1",
+    "gatsby-plugin-sass": "^5.12.1",
+    "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-sitemap": "^5.12.1",
+    "gatsby-plugin-typescript": "^4.12.1",
+    "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-transformer-sharp": "^4.12.1",
+    "gsap": "^3.10.3",
     "ogp-parser": "^0.6.0",
-    "prettier": "^2.5.1",
-    "prismjs": "^1.25.0",
-    "react": "^17.0.2",
+    "prettier": "^2.6.2",
+    "prismjs": "^1.27.0",
+    "react": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "react-remark": "^2.0.3",
-    "react-side-effect": "^2.1.1",
+    "react-remark": "^2.1.0",
     "react-transition-group": "^4.4.2",
     "remark": "^14.0.2",
     "remark-gfm": "1.0.0",
@@ -54,6 +54,6 @@
     "remark-stringify": "^10.0.2",
     "remark-toc": "^8.0.1",
     "remove-markdown": "^0.3.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.6.3"
   }
 }
