--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-gatsby": "^2.12.1",
     "framer-motion": "^6.3.0",
     "gatsby": "^4.12.1",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-gtag": "^4.12.1",
     "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-manifest": "^4.12.1",
