--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "watasuke.tk",
+  "name": "watasuke.net",
   "version": "1.0.0",
-  "description": "[https://watasuke.tk](https://watasuke.tk)で公開されているページ",
+  "description": "[https://watasuke.net](https://watasuke.net)で公開されているページ",
   "main": "index.js",
   "scripts": {
     "fmt": "prettier --write src/",
