--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "homepage": "https://github.com/watasuke102/watasuke.net#readme",
   "dependencies": {
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.21",
+    "@types/react": "^18.0.24",
     "@types/react-helmet": "^6.1.5",
     "@types/react-transition-group": "^4.4.5",
     "@types/remove-markdown": "^0.3.1",
+    "assert": "^2.0.0",
     "babel-plugin-prismjs": "^2.1.0",
     "babel-preset-gatsby": "^2.24.0",
-    "framer-motion": "^7.6.1",
-    "gatsby": "^4.24.4",
+    "framer-motion": "^7.6.4",
+    "gatsby": "^4.24.6",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-gtag": "^4.24.0",
     "gatsby-plugin-image": "^2.24.0",
@@ -46,10 +47,12 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-remark": "^2.1.0",
+    "react-markdown": "^8.0.3",
     "react-transition-group": "^4.4.5",
+    "rehype-raw": "^6.1.1",
     "remark": "^14.0.2",
-    "remark-gfm": "1.0.0",
+    "remark-gfm": "3.0.1",
+    "remark-rehype": "^10.1.0",
     "remark-slug": "^7.0.1",
     "remark-stringify": "^10.0.2",
     "remark-toc": "^8.0.1",
