--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 version: '3'
 
 services:
-
-# from https://zenn.dev/nosu/articles/a0956568ee2170
+  # from https://zenn.dev/nosu/articles/a0956568ee2170
   strapi:
-    image: strapi/strapi
+    image: strapi/strapi:3.6.8
     environment:
       DATABASE_CLIENT: mysql
       DATABASE_HOST: mysql
@@ -27,7 +26,7 @@ services:
     volumes:
       - ./mysql:/var/lib/mysql
     ports:
-    - '3334:3306'
+      - '3334:3306'
     environment:
       MYSQL_ROOT_PASSWORD: strapi
       MYSQL_DATABASE: strapi
