--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.24",
-    "@types/react-helmet": "^6.1.5",
     "@types/react-transition-group": "^4.4.5",
     "@types/remove-markdown": "^0.3.1",
     "assert": "^2.0.0",
@@ -46,7 +45,7 @@
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.3",
     "react-transition-group": "^4.4.5",
     "rehype-raw": "^6.1.1",
