--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
-    "allowJs": true /* Allow javascript files to be compiled. */,
+    "allowJs": false /* Allow javascript files to be compiled. */,
     "jsx": "react" /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */,
     "removeComments": true /* Do not emit comments to output. */,
     /* Strict Type-Checking Options */
@@ -18,12 +18,14 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["src/components/*"], 
+      "@/*": ["src/components/*"],
       "@utils/*": ["src/utils/*"],
       "@mytypes/*": ["src/types/*"]
     },
     "typeRoots": ["src/types"]
   },
-  "exclude": ["node_modules", "webpack.config.js", "dist"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", ".cache", "public", "api", "webpack.config.js", "sample-config.js", "config.js"]
 }
