--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,7 +1,21 @@
 tabWidth: 2
 printWidth: 120
 singleQuote: true
-arrowParens: "avoid"
-trailingComma: "all"
+arrowParens: 'avoid'
+trailingComma: 'all'
 jsxSingleQuote: true
 bracketSpacing: false
+
+# importの種類ごとに改行を挟まない
+importOrderSeparation: false
+importOrderCaseInsensitive: false
+importOrder:
+  - 'config'
+  - '^@/pages/(.*)'
+  - '<THIRD_PARTY_MODULES>'
+  - '^@/common/(.*)'
+  - '^@/feature/(.*)'
+  - '^@utils/(.*)'
+  - '^@mytypes/(.*)'
+  - '^[./]'
+  - '(.*).scss'
