--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
     "ogp-parser": "^0.6.0",
-    "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -57,5 +56,9 @@
     "remark-toc": "^8.0.1",
     "remove-markdown": "^0.5.0",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "prettier": "^2.7.1"
   }
 }
