update: configをjsonに、エイリアスでアクセス可能に
jsだとTypeScriptからimportした時にエラーが出るが、tsにするとgatsby-config.jsから読み込めない

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -10,7 +10,7 @@ bracketSpacing: false
 importOrderSeparation: false
 importOrderCaseInsensitive: false
 importOrder:
-  - 'config'
+  - '@config'
   - '^@/pages/(.*)'
   - '<THIRD_PARTY_MODULES>'
   - '^@/common/(.*)'
