--- a/package.json
+++ b/package.json
@@ -23,29 +23,30 @@
   "homepage": "https://github.com/watasuke102/watasuke.net#readme",
   "dependencies": {
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.0.26",
     "@types/react-transition-group": "^4.4.5",
     "@types/remove-markdown": "^0.3.1",
     "assert": "^2.0.0",
     "babel-plugin-prismjs": "^2.1.0",
-    "babel-preset-gatsby": "^2.24.0",
-    "framer-motion": "^7.6.4",
-    "gatsby": "^4.24.6",
+    "babel-preset-gatsby": "^3.3.1",
+    "framer-motion": "^8.1.9",
+    "gatsby": "^5.3.3",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-google-gtag": "^4.24.0",
-    "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-react-helmet": "^5.24.0",
-    "gatsby-plugin-sass": "^5.24.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-plugin-sitemap": "^5.24.0",
-    "gatsby-plugin-typescript": "^4.24.0",
-    "gatsby-source-filesystem": "^4.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
+    "gatsby-plugin-google-gtag": "^5.3.0",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-react-helmet": "^6.3.0",
+    "gatsby-plugin-sass": "^6.3.1",
+    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-plugin-typescript": "^5.3.1",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-sharp": "^5.3.1",
+    "graphql": "^16.6.0",
     "ogp-parser": "^0.6.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-markdown": "^8.0.3",
+    "react-markdown": "^8.0.4",
     "react-transition-group": "^4.4.5",
     "rehype-raw": "^6.1.1",
     "remark": "^14.0.2",
@@ -55,7 +56,7 @@
     "remark-stringify": "^10.0.2",
     "remark-toc": "^8.0.1",
     "remove-markdown": "^0.5.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
@@ -64,6 +65,6 @@
     "eslint": "^8.31.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.31.11",
-    "prettier": "^2.7.1"
+    "prettier": "^2.8.1"
   }
 }
