--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-sitemap": "^6.3.1",
     "gatsby-plugin-typescript": "^5.3.1",
-    "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
     "graphql": "^16.6.0",
     "ogp-parser": "^0.6.0",
@@ -56,6 +55,7 @@
     "remark-stringify": "^10.0.2",
     "remark-toc": "^8.0.1",
     "remove-markdown": "^0.5.0",
+    "toml": "^3.0.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
