update: History>タイムラインの縦線をより雑な実装にした

--- a/src/assets/portfolio_toml/History.toml
+++ b/src/assets/portfolio_toml/History.toml
@@ -30,3 +30,14 @@ day         = "01/01\n|\n02/02"
 category    = "Work"
 body_ja     = "あ"
 body_en     = "hoge"
+
+[[event]]
+year        = "2021"
+title_ja    = "タイトル1"
+title_en    = "title1"
+subtitle_ja = "サブタイトル1"
+subtitle_en = "subtitle1"
+day         = "03/03"
+category    = "Work"
+body_ja     = "あ"
+body_en     = "hoge"
