update: History>tomlをちゃんと埋めた

--- a/src/assets/portfolio_toml/History.toml
+++ b/src/assets/portfolio_toml/History.toml
@@ -1,64 +1,339 @@
+# 2019
 [[event]]
-year        = "2020"
-title_ja    = "高専入学"
-title_en    = "高専入学"
-subtitle_ja = ""
-subtitle_en = ""
-day         = "04/01"
-category    = ""
+year        = "2019"
+day         = "08/15" # U-22への提出日
+category    = "Work"
+title_ja    = "MarkStudy"
+title_en    = "MarkStudy"
+subtitle_ja = "学習特化テキストエディタ"
+subtitle_en = "text editor for study"
 body_ja     = """
-# Markdown
+2019年U-22プロコン応募作品（事前審査落ち）
 
-マークダウンで記述できるようにしました
-うれしい
+マークアップ形式でWYSIWYGライクに編集し、単語に重要度を設定し、
+非表示にしたり強調したりして復習することができます。
 
-テスト
-
-テスト
-
-テスト
+[GitHub](https://github.com/watasuke102/MarkStudy) / 
+[Scrapbox](https://scrapbox.io/watasuke/U-22%E3%83%97%E3%83%AD%E3%82%B3%E3%83%B3%EF%BC%9A2019%E5%B9%B4)
 """
 body_en     = """
-# Markdown
+Submitted to 2019 U-22 Programming Contest (lose by a pre-election)
 
-Let's use markdown :)
+Edit with markup language like WYSIWYG, set importance and hide / emphasize the words.
 
-test
+[GitHub](https://github.com/watasuke102/MarkStudy) / 
+[Scrapbox](https://scrapbox.io/watasuke/U-22%E3%83%97%E3%83%AD%E3%82%B3%E3%83%B3%EF%BC%9A2019%E5%B9%B4)
+"""
 
-test
+[[event]]
+year        = "2019"
+day         = "10/25"
+category    = "Work"
+title_ja    = "STG"
+title_en    = "STG"
+subtitle_ja = "文化祭用のシューティングゲーム"
+subtitle_en = "Shooting Game for School festival"
+body_ja     = """
+![プレイ中のスクリーンショット](/works/schoolfest-stg.jpg)
 
-test
+OpenSiv3Dでグレイズをコンセプトにした弾幕シューティングゲームを作ろうとしていました。
+
+[GitHub](https://github.com/watasuke102/SchoolFestSTG)
+"""
+body_en     = """
+![screenshot of TAGether usage](/works/schoolfest-stg.jpg)
+
+Trying to make Bullet Hell STG with Graze as a concept
+
+[GitHub](https://github.com/watasuke102/SchoolFestSTG)
+"""
+
+# 2020
+[[event]]
+year        = "2020"
+day         = "04/01"
+category    = "General"
+title_ja    = "高専入学"
+title_en    = "Enter KOSEN"
+subtitle_ja = "情報系の学科"
+subtitle_en = "Department about information"
+body_ja     = ""
+body_en     = ""
+
+[[event]]
+year        = "2020"
+day         = "05/11 -" # join to Fascode
+category    = "Work"
+title_ja    = "Alter Linux (i3wm edition)"
+title_en    = "Alter Linux (i3wm edition)"
+subtitle_ja = "テスト対策問題の共有サービス"
+subtitle_en = "Service to share self-made exam"
+body_ja     = """
+![alterlinux-i3-manager](/works/alterlinux-i3-manager.jpg)
+（画像は i3wmエディション用のGUI設定ツール、
+[alterlinux-i3-manager](https://github.com/FascodeNet/alterlinux-i3-manager)）
+
+学生団体[FascodeNetwork](https://fascode.net/) に[参加](https://twitter.com/Watasuke102/status/1259835713991802881)し、
+Alter Linux i3wmエディションの開発などを行いました。
+
+[GitHub](https://github.com/FascodeNet/alterlinux)
+"""
+body_en     = """
+![alterlinux-i3-manager](/works/alterlinux-i3-manager.jpg)
+(This image is [alterlinux-i3-manager](https://github.com/FascodeNet/alterlinux-i3-manager), 
+a GUI configuration tool for i3wm edition)
+
+Join [FascodeNetwork](https://fascode.net/) (student organization), and developing Alter Linux i3wm edition.
+
+[GitHub](https://github.com/FascodeNet/alterlinux)
 """
 
 [[event]]
 year        = "2020"
-title_ja    = "タイトル"
-title_en    = "title"
-subtitle_ja = "サブタイトル"
-subtitle_en = "subtitle"
-day         = "01/01 -"
+day         = "12/19 -" # initial commit
 category    = "Work"
-body_ja     = "あ"
-body_en     = "hoge"
+title_ja    = "TAGether"
+title_en    = "TAGether"
+subtitle_ja = "テスト対策問題の共有サービス"
+subtitle_en = "Service to share self-made exam"
+body_ja     = """
+![TAGetherを実際に使用している様子](/works/tagether.jpg)
+
+テスト対策問題を作ってクラス内に共有することが出来るサービスです。
+
+フロントエンドにNext.js、バックエンドにExpress・MySQLを使用して作成しました。
+
+[GitHub](https://github.com/watasuke102/TAGether) / 
+[Scrapbox](https://scrapbox.io/watasuke/TAGether)
+"""
+body_en     = """
+![screenshot of TAGether usage](/works/tagether.jpg)
+
+The service makes possible to share self-made exam for classmates.
+
+Use Next.js as frontend, Express / MySQL as backend
+
+[GitHub](https://github.com/watasuke102/TAGether) / 
+[Scrapbox](https://scrapbox.io/watasuke/TAGether)
+"""
+
+[[event]]
+year        = "2020"
+day         = "10/19"
+category    = "Work"
+title_ja    = "ExpNote"
+title_en    = "ExpNote"
+subtitle_ja = "簡易的な所持金管理アプリ"
+subtitle_en = "A simple household account book"
+body_ja     = """
+![ExpNoteを使用している様子](/works/expnote.jpg)
+
+Flutterを用いて作った所持金管理アプリです。
+
+日付・イベント名・収支を入力すると、全体の収支が分かります。
+
+[GitHub](https://github.com/watasuke102/ExpNote)
+"""
+body_en     = """
+![screenshot of ExpNote usage](/works/expnote.jpg)
+
+Household account book application with Flutter
+
+Add date, event name, and payment amounts to check the total balance.
+
+[GitHub](https://github.com/watasuke102/ExpNote)
+"""
+
+
+[[event]]
+year        = "2020"
+day         = "10/31"
+category    = "Event"
+title_ja    = "第1回 限界LT feat.Fascode"
+title_en    = "1st 限界LT feat.Fascode"
+subtitle_ja = "LT「Flutterはいいぞ」"
+subtitle_en = "LT 'Flutterはいいぞ'"
+body_ja     = """
+ExpNoteの開発を経てFlutterを布教したくなったので、LTで雑に布教しました。
+
+[スライド](https://docs.google.com/presentation/d/1vUuO9ZfyuO-fTv9cP9IfHdoXK1sQzAmNS05QJO-iRq0/edit?usp=share_link)
+ / [発表の様子 (YouTube)](https://www.youtube.com/live/LetsnbqNA-U?feature=share&t=12701)
+"""
+body_en     = """
+Lightning Talk to roughly recommend Flutter.
+
+[Slide](https://docs.google.com/presentation/d/1vUuO9ZfyuO-fTv9cP9IfHdoXK1sQzAmNS05QJO-iRq0/edit?usp=share_link)
+ / [発表の様子 (YouTube)](https://www.youtube.com/live/LetsnbqNA-U?feature=share&t=12701)
+"""
+
+# 2021
+[[event]]
+year        = "2021"
+day         = "09/05"
+category    = "Work"
+title_ja    = "TimeTree-NoticeBot"
+title_en    = "TimeTree-NoticeBot"
+subtitle_ja = "TimeTreeの予定をDiscordに通知"
+subtitle_en = "Notify schedule on TimeTree"
+body_ja     = """
+![TimeTree-NoticeBotからの通知](/works/timetree-noticebot.jpg)
+
+Rustを用いて作成したDiscord用Botです。
+
+TimeTreeからその日の予定を確認し、そのイベントの開始前に指定されたチャンネルに通知します。
+
+[GitHub](https://github.com/watasuke102/TimeTree-NoticeBot-rust)
+"""
+body_en     = """
+![Notice from TimeTree-NoticeBot](/works/timetree-noticebot.jpg)
+
+Discord Bot with Rust.
+
+Check today's schedule in TimeTree and notify by sending a message before the event starts.
+
+[GitHub](https://github.com/watasuke102/TimeTree-NoticeBot-rust)
+"""
 
 [[event]]
 year        = "2021"
-title_ja    = "タイトル"
-title_en    = "title"
-subtitle_ja = "サブタイトル"
-subtitle_en = "subtitle"
-day         = "01/01\n|\n02/02"
+day         = "12/05"
 category    = "Work"
-body_ja     = "あ"
-body_en     = "hoge"
+title_ja    = "discord-voicechat-notice"
+title_en    = "discord-voicechat-notice"
+subtitle_ja = "VCの様子を通知"
+subtitle_en = "Notify VC status"
+body_ja     = """
+![実際のメッセージ](/works/discord-voicechat-notice.jpg)
+
+RustおよびSerenityを用いて作成したDiscord用Botです。
+
+Discordのボイスチャットチャンネルに誰かが入ったり出たりするとメッセージを送信して通知します。
+
+[GitHub](https://github.com/watasuke102/discord-voicechat-notice)
+"""
+body_en     = """
+![actual message](/works/discord-voicechat-notice.jpg)
+
+Discord Bot with Rust + Serenity.
+
+Notify by sending a message when someone joins or leaves the Discord Voice Chat channel.
+
+[GitHub](https://github.com/watasuke102/discord-voicechat-notice)
+"""
+
+# 2022
+[[event]]
+year        = "2022"
+day         = "07/04 -" # 未踏Ad 契約開始
+category    = "Work"
+title_ja    = "Zwin : XR windowing system"
+title_en    = "Zwin : XR windowing system"
+subtitle_ja = "2022年度 未踏アドバンスト事業採択"
+subtitle_en = "2022 Mitou Advanced"
+body_ja     = """
+![zen: Zwinプロトコルのリファレンス実装](/works/zwin-zen.jpg)
+
+Linux上で動作する、Waylandを用いたXR向けwindowing systemです。
+VR HMDを用いて、仮想空間に2Dウィンドウを配置したり、3Dアプリケーションを動かしたりすることが出来ます。
+
+2022年度の未踏アドバンスト事業に採択されました。主に2Dデスクトップ環境において必要とされる機能を実装しています。
+
+[Official site](https://www.zwin.dev/ja) / [GitHub](https://github.com/zwin-project)
+"""
+body_en     = """
+![zen: the reference compositor implementation of Zwin protocol](/works/zwin-zen.jpg)
+
+Windowing system for XR on Linux using Wayland.
+By using VR HMD, you can place 2D window in the virtual space and launch 3D application.
+
+Adoped by 2022 Mitou Advanced. I implemented the feature for 2D desktop environment.
+
+[Official site](https://www.zwin.dev) / [GitHub](https://github.com/zwin-project)
+"""
 
 [[event]]
-year        = "2021"
-title_ja    = "タイトル1"
-title_en    = "title1"
-subtitle_ja = "サブタイトル1"
-subtitle_en = "subtitle1"
-day         = "03/03"
-category    = "Work"
-body_ja     = "あ"
-body_en     = "hoge"
+year        = "2022"
+day         = "08/08\n|\n08/12"
+category    = "Event"
+title_ja    = "セキュリティ・キャンプ 全国大会 2022"
+title_en    = "Security Camp 2022"
+subtitle_ja = "Y4 RISC-V CPU自作ゼミ"
+subtitle_en = "Y4 RISC-V CPU selfmade seminar"
+body_ja     = """
+CPU自作ゼミで、RISC-V CPUをFPGA上に実装しました。
+講義中はUARTの実装・キャラクタLCDの制御・HDMI出力を行いました。
+
+[GitHub](https://github.com/watasuke102/seccamp_2022_riscv_cpu)
+ / [成果報告時に用いたスライド](https://docs.google.com/presentation/d/1jZhWOtsE-aoRW_FdrEXbnvV6VrNH59Q2q-pH8CTHtDc/edit?usp=sharing)
+ / [応募課題晒し](https://watasuke.net/blog/article/seccamp-2022-app-publish/)
+ / [感想](https://watasuke.net/blog/article/seccamp-2022-app-publish/)
+"""
+body_en     = """
+Implementing RISC-V CPU on FPGA.
+I implemented UART, character LCD operation, HDMI output.
+
+[GitHub](https://github.com/watasuke102/seccamp_2022_riscv_cpu)
+ / [Slide for final result presentation](https://docs.google.com/presentation/d/1jZhWOtsE-aoRW_FdrEXbnvV6VrNH59Q2q-pH8CTHtDc/edit?usp=sharing)
+ / [my application](https://watasuke.net/blog/article/seccamp-2022-app-publish/)
+ / [my thoughts (blog)](https://watasuke.net/blog/article/seccamp-2022-app-publish/)
+"""
+
+[[event]]
+year        = "2022"
+day         = "08/08"
+category    = "Event"
+title_ja    = "セキュリティ・キャンプ LT大会"
+title_en    = "Security Camp LT"
+subtitle_ja = "LT 「身内限定で自作サービスを公開するのかなり良いよ」"
+subtitle_en = "LT '身内限定で自作サービスを公開するのかなり良いよ'"
+body_ja     = """
+セキュリティ・キャンプのプログラムとしてLT大会が開催され、
+そこでTAGetherについて紹介しました。
+
+[スライド](https://docs.google.com/presentation/d/1KDI_VyW8FBDn1HOIMIsVJAuwtDEI6TzFuUhQJHcE-8k/edit?usp=share_link)
+"""
+body_en     = """
+Lightning Talk event is held by Security Camp, and I introduced about TAGether.
+
+[Slide](https://docs.google.com/presentation/d/1KDI_VyW8FBDn1HOIMIsVJAuwtDEI6TzFuUhQJHcE-8k/edit?usp=share_link)
+"""
+
+[[event]]
+year        = "2022"
+day         = "09/18" # プレゼン実施日
+category    = "Event"
+title_ja    = "技育展 2022"
+title_en    = "Geekten 2022"
+subtitle_ja = "TAGether / Zwin"
+subtitle_en = "TAGether / Zwin"
+body_ja     = """
+「世の中を便利にする」テーマでTAGetherを、「開発/スキル支援」テーマで Zwin （当時ZIGEN）をそれぞれ紹介しました。
+
+Zwinは当該テーマにおいて最優秀賞を獲得しました。
+"""
+body_en     = """
+Introduce TAGether in "Make the world more convenience" theme,
+Zwin (ZIGEN at that time) in "Development/Skill assist" theme.
+
+Zwin won at that theme.
+"""
+
+# 2023
+[[event]]
+year        = "2023"
+day         = "02/13\n|\n02/17"
+category    = "Event"
+title_ja    = "Global Cybersecurity Camp 2023 Singapore"
+title_en    = "Global Cybersecurity Camp 2023 Singapore"
+subtitle_ja = "チューター"
+subtitle_en = "Staff"
+body_ja     = """
+チューターとして参加し、受講生の支援・グループワークのモデレーションを行いました。
+
+[感想](https://watasuke.net/blog/article/gcc2023-attend/)
+"""
+body_en     = """
+Join as staff, and assist student / moderate groupwork.
+
+[my thoughts (blog)](https://watasuke.net/blog/article/gcc2023-attend/)
+"""
