update: EventCard>ImageViewerを削除
最前面に表示するのが難しすぎたので断念

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "fmt": "prettier --write src/",
     "build": "gatsby build",
     "dev": "gatsby develop -H 0.0.0.0",
-    "serve": "gatsby serve -p 2999"
+    "serve": "gatsby serve -p 2999 -H 0.0.0.0"
   },
   "repository": {
     "type": "git",
