--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@types/react": "^18.0.33",
     "@types/react-transition-group": "^4.4.5",
     "@types/remove-markdown": "^0.3.1",
+    "@vanilla-extract/babel-plugin": "^1.2.0",
+    "@vanilla-extract/css": "^1.11.0",
+    "@vanilla-extract/webpack-plugin": "^2.2.0",
     "assert": "^2.0.0",
     "babel-plugin-prismjs": "^2.1.0",
     "babel-preset-gatsby": "^3.8.0",
@@ -41,6 +44,7 @@
     "gatsby-plugin-sharp": "^5.8.1",
     "gatsby-plugin-sitemap": "^6.8.0",
     "gatsby-plugin-typescript": "^5.8.0",
+    "gatsby-plugin-vanilla-extract": "^4.0.1",
     "gatsby-transformer-sharp": "^5.8.0",
     "graphql": "^16.6.0",
     "ogp-parser": "^0.7.1",
