--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "typeRoots": ["src/types"]
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", ".cache", "public", "api", "webpack.config.js"]
+  "exclude": ["node_modules", ".cache", "public", "api", "webpack.config.js", "sample-env.ts"]
 }
