--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint": "^8.38.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.7"
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.8.7",
   }
 }
