--- a/package.json
+++ b/package.json
@@ -71,6 +71,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.7"
   }
 }
