--- a/sample-config.json
+++ b/sample-config.json
@@ -1,7 +1,7 @@
 {
   "contentUrl": "http://127.0.0.1:1337",
   "imageUrl": "http://localhost:1337",
-  "trackingId": "",
+  "trackingId": "_",
   "adsenseId": "",
   "inArticleSlot": ""
 }
