--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@assets/*": ["src/assets/*"],
       "@utils/*": ["src/utils/*"],
       "@mytypes/*": ["src/types/*"],
-      "@config": ["config.json"]
+      "@config": ["config.ts"]
     },
     "typeRoots": ["src/types"]
   },
