--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,6 @@ jobs:
       - name: Setup
         run: |
           npm install
-          sed -e 's|.*contentUrl.*|  "contentUrl": "https://data.watasuke.net",|' sample-config.json > config.json
+          sed -e 's|contentUrl.*|contentUrl = "https://data.watasuke.net";|' sample-config.ts > config.ts
       - name: Build
         run: npm run build
