update: importソート設定の変更
@vanilla-extract/cssがフォーマットの設定に引っかかっていた等

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -6,11 +6,14 @@ trailingComma: 'all'
 jsxSingleQuote: true
 bracketSpacing: false
 
+plugins:
+  - '@trivago/prettier-plugin-sort-imports'
 # importの種類ごとに改行を挟まない
 importOrderSeparation: false
 importOrderCaseInsensitive: false
 importOrder:
-  - '@config'
+  - '^@config'
+  - '(.*)\.css$'
   - '^@/pages/(.*)'
   - '<THIRD_PARTY_MODULES>'
   - '^@/common/(.*)'
@@ -18,5 +21,4 @@ importOrder:
   - '^@utils/(.*)'
   - '^@mytypes/(.*)'
   - '^[./]'
-  - '(.*).css'
   - '^@assets/(.*)'
