update: highlight.jsの導入、Prism等の不要なライブラリを削除

--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
   },
   "homepage": "https://github.com/watasuke102/watasuke.net#readme",
   "dependencies": {
-    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.16",
     "@types/react-transition-group": "^4.4.6",
     "@types/remove-markdown": "^0.3.1",
-    "@vanilla-extract/babel-plugin": "^1.2.0",
     "@vanilla-extract/css": "^1.12.0",
     "@vanilla-extract/webpack-plugin": "^2.2.0",
     "assert": "^2.0.0",
-    "babel-plugin-prismjs": "^2.1.0",
-    "babel-preset-gatsby": "^3.11.0",
     "framer-motion": "^10.13.1",
     "gatsby": "^5.11.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -46,11 +42,12 @@
     "gatsby-plugin-vanilla-extract": "^4.0.1",
     "gatsby-transformer-sharp": "^5.11.0",
     "graphql": "^16.7.1",
+    "highlight.js": "^11.9.0",
     "ogp-parser": "^0.8.1",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-transition-group": "^4.4.5",
+    "rehype-highlight": "^7.0.0",
     "rehype-raw": "^6.1.1",
     "remark": "^14.0.3",
     "remark-gfm": "3.0.1",
