--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/watasuke102/watasuke.net#readme",
   "dependencies": {
+    "@types/hast": "^3.0.3",
     "@types/react": "^18.2.16",
     "@types/react-transition-group": "^4.4.6",
     "@types/remove-markdown": "^0.3.1",
@@ -40,6 +41,7 @@
     "gatsby-plugin-sitemap": "^6.11.0",
     "gatsby-plugin-typescript": "^5.11.0",
     "gatsby-plugin-vanilla-extract": "^4.0.1",
+    "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-sharp": "^5.11.0",
     "graphql": "^16.7.1",
     "highlight.js": "^11.9.0",
@@ -57,7 +59,8 @@
     "remark-toc": "^8.0.1",
     "remove-markdown": "^0.5.0",
     "toml": "^3.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
