--- a/package.json
+++ b/package.json
@@ -23,53 +23,48 @@
   "homepage": "https://github.com/watasuke102/watasuke.net#readme",
   "dependencies": {
     "@types/hast": "^3.0.3",
-    "@types/react": "^18.2.16",
-    "@types/react-transition-group": "^4.4.6",
-    "@types/remove-markdown": "^0.3.1",
-    "@vanilla-extract/css": "^1.12.0",
-    "@vanilla-extract/webpack-plugin": "^2.2.0",
-    "assert": "^2.0.0",
-    "framer-motion": "^10.13.1",
-    "gatsby": "^5.11.0",
+    "@types/react": "^18.2.38",
+    "@types/react-transition-group": "^4.4.9",
+    "@types/remove-markdown": "^0.3.4",
+    "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/webpack-plugin": "^2.3.1",
+    "framer-motion": "^10.16.5",
+    "gatsby": "^5.12.11",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-google-gtag": "^5.11.0",
-    "gatsby-plugin-image": "^3.11.0",
-    "gatsby-plugin-manifest": "^5.11.0",
+    "gatsby-plugin-google-gtag": "^5.12.3",
+    "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-react-svg": "^3.3.0",
-    "gatsby-plugin-sass": "^6.11.0",
-    "gatsby-plugin-sharp": "^5.11.0",
-    "gatsby-plugin-sitemap": "^6.11.0",
-    "gatsby-plugin-typescript": "^5.11.0",
+    "gatsby-plugin-sass": "^6.12.3",
+    "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-plugin-sitemap": "^6.12.3",
+    "gatsby-plugin-typescript": "^5.12.1",
     "gatsby-plugin-vanilla-extract": "^4.0.1",
     "gatsby-source-filesystem": "^5.12.1",
-    "gatsby-transformer-sharp": "^5.11.0",
-    "graphql": "^16.7.1",
+    "gatsby-transformer-sharp": "^5.12.3",
     "highlight.js": "^11.9.0",
     "ogp-parser": "^0.8.1",
     "react": "^18.2.0",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^9.0.1",
     "react-transition-group": "^4.4.5",
     "rehype-highlight": "^7.0.0",
-    "rehype-raw": "^6.1.1",
-    "remark": "^14.0.3",
-    "remark-gfm": "3.0.1",
-    "remark-rehype": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-slug": "^7.0.1",
-    "remark-stringify": "^10.0.3",
-    "remark-toc": "^8.0.1",
+    "remark-toc": "^9.0.0",
     "remove-markdown": "^0.5.0",
     "toml": "^3.0.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.3.2",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.45.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.1.0"
   }
 }
