update: package version and follow-up

--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@graphql-codegen/typescript-operations": "^4.2.0",
     "@types/hast": "^3.0.4",
-    "@types/react": "^18.2.73",
+    "@types/react": "^18.2.79",
     "@types/react-transition-group": "^4.4.10",
     "@types/remove-markdown": "^0.3.4",
     "@vanilla-extract/css": "^1.14.2",
     "@vanilla-extract/webpack-plugin": "^2.3.7",
-    "framer-motion": "^11.0.24",
-    "gatsby": "^5.13.3",
+    "framer-motion": "^11.1.7",
+    "gatsby": "^5.13.4",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
@@ -49,6 +49,8 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "hast": "^1.0.0",
+    "hast-util-to-jsx-runtime": "^2.3.0",
     "highlight.js": "^11.9.0",
     "ogp-parser": "^0.8.1",
     "react": "^18.2.0",
@@ -61,14 +63,14 @@
     "remark-toc": "^9.0.0",
     "remove-markdown": "^0.5.0",
     "toml": "^3.0.0",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "8.57.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-react": "^7.34.1",
