--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,16 +18,29 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"],
-      "@utils/*": ["src/utils/*"],
-      "@mytypes/*": ["src/types/*"],
-      "@config": ["config.ts"]
+      "@/*": [
+        "src/components/*"
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@utils/*": [
+        "src/utils/*"
+      ],
+      "@mytypes/*": [
+        "src/types/*"
+      ],
+      "@config": [
+        "config.ts"
+      ]
     },
-    "typeRoots": ["src/types"]
+    "typeRoots": [
+      "src/types"
+    ]
   },
   "include": [
     "./src/**/*",
